[package]
name = "readability"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
html5ever = "0.25.1"
kuchiki = "0.8.1"
lazy_static = "1.4.0"
log = "0.4.14"
regex = "1.5.4"
url = "2.2.2"
markup5ever = "0.10.1"