[package]
name = "mozilla-readability"
version = "0.1.1"
edition = "2021"
authors = ["Kyle Fahey <kyle.c.r.fahey@gmail.com>"]
description = "Mozilla Readability in Rust"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
crate-type = ["cdylib"]
bench = false
path = "src/lib.rs" 

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[dependencies]
html5ever = "0.25.1"
kuchiki = "0.8.1"
lazy_static = "1.4.0"
log = "0.4.14"
regex = "1.5.4"
url = "2.2.2"
markup5ever = "0.10.1"